# st-audio-recorder

./: .gitignore  CHANGELOG.md  Pipfile  README.md  dev.md  pyproject.toml  setup.py  tox.ini
audio_recorder_streamlit/: __init__.py  example.py
audio_recorder_streamlit/frontend/: package-lock.json  package.json
audio_recorder_streamlit/frontend/public/: index.html
audio_recorder_streamlit/frontend/src/: AudioRecorder.tsx  RecorderUI.tsx  index.tsx
